[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Castes/CasteViewMenu.gd" type="Script" id=1]

[node name="CasteViewMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1032.0
margin_bottom = 608.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsLabel" type="Label" parent="."]
margin_left = 71.0
margin_top = 45.0
margin_right = 966.0
margin_bottom = 97.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApprovalLabel" type="Label" parent="."]
margin_left = 86.0
margin_top = 110.0
margin_right = 976.0
margin_bottom = 171.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeopleInCasteAndRolesLabel" type="Label" parent="."]
margin_left = 102.0
margin_top = 192.0
margin_right = 964.0
margin_bottom = 254.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoneButton" type="Button" parent="."]
margin_left = 475.74
margin_top = 497.121
margin_right = 583.74
margin_bottom = 556.121
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="DoneButton" to="." method="_on_DoneButton_pressed"]
